# substratechocobos

./: README.md
substratechocobos/: Cargo.toml  README.md  asdasd.sh
substratechocobos-ui/docs/: index.html
substratechocobos-ui/src/: app.jsx
substratechocobos/runtime/: Cargo.toml
substratechocobos/runtime/src/: lib.rs  substratechocobos.rs
substratechocobos/runtime/wasm/: Cargo.toml  build.sh
substratechocobos/runtime/wasm/src/: lib.rs
substratechocobos/src/: chain_spec.rs  cli.rs  main.rs  service.rs
